price-tag letter spacing fixed

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1586,6 +1586,7 @@ section {
 
             h3 {
                 color: color(text);
+                letter-spacing: 0;
             }
 
             .gap-p {
